--- a/starter-code/bower.json
+++ b/starter-code/bower.json
@@ -10,6 +10,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "angular": "~1.4.7"
+    "angular": "~1.4.7",
+    "angular-resource": "^1.5.8"
   }
 }
